overflow fix

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     align-items: center;
     height: 100vh;
     background-color: rgb(20, 0, 35);
+    overflow: hidden;
 }
 
 
@@ -58,6 +59,7 @@ body{
     justify-content: center;
     align-items: center;
 }
+
 
 .eye{
     fill: white;
